...
      iconSvgXml: sportsManagerIcons.activeRequest,
      color: theme.colors.primary,
      onPress: () => navigation.navigate('SportsRaiseRequest'),
    },
    {
      id: 'active-requests',
      title: 'Active Requests',
      iconSvgXml: sportsManagerIcons.activeRequest,
      color: theme.colors.primary,
      badge: stats?.active_bookings,
      onPress: () => navigation.navigate('SportsActiveRequests'),
    },
    {
...
      iconSvgXml: sportsManagerIcons.activeRequest,
      color: theme.colors.primary,
      onPress: () => navigation.navigate('Checklist'),
    },
    {
      id: 'courts',
      title: 'List of Courts',
      iconSvgXml: sportsManagerIcons.courtsList,
      color: theme.colors.primary,
      onPress: () => navigation.navigate('CourtSetup'),
    },
    {
      id: 'comm-box',
...
